# Hierarchy-image-retrieval

./: pyproject.toml  requirements.txt  val.py
hierarchy_utils/: hierarchy_metrics.py
