[tool.poetry]
name = "hierarchy-image-retrieval"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
albumentations = "^1.3.1"
ete3 = "^3.1.3"
matplotlib = "^3.7.2"
networkx = "^3.1"
numpy = "<1.24,>=1.22"
pandas = "^1.5.3"
pillow = "^10.0.0"
pyclustering = "^0.10.1.2"
python-igraph = "^0.10.6"
scikit-learn = "^1.3.0"
yacs = "^0.1.8"
timm = "^0.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
