[tool.poetry]
name = "hierarchy-image-retrieval"
version = "0.1.0"
description = ""
authors = ["havardox <harald.varner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
albumentations = "^1.3.1"
ete3 = "^3.1.3"
matplotlib = "^3.7.2"
networkx = "^3.1"
numpy = "^1.25.2"
pandas = "^2.1.0"
pillow = "^10.0.0"
pyclustering = "^0.10.1.2"
python-igraph = "^0.10.6"
scikit-learn = "^1.3.0"
scipy = "^1.11.2"
timm = "^0.9.6"
torch = "^2.0.1"
torchvision = "^0.15.2"
yacs = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
